# task_manager

./: .env.template  Dockerfile  README.md  app.py  docker-compose.yml  fixture.json  piccolo_conf.py  piccolo_conf_test.py  prestart.sh  pyproject.toml  start.sh
initdb/: create-task-manager-db.sh
pgadmin-init/: servers.json
tasks/: endpoints.py  piccolo_app.py  routers.py  tables.py
tasks/piccolo_migrations/: tasks_2024_05_25t16_33_16_845957.py  tasks_2024_05_26t20_05_13_582554.py  tasks_2024_05_26t21_56_35_949373.py  tasks_2024_05_27t13_26_32_181532.py
tasks/test/: test_endpoints.py  test_routers.py
tasks/types/: task.py
