[tool.poetry]
name = "task_manager"
version = "0.1.0"
description = "Code challenge for Chemify"
authors = ["Scott Greig <scottjgreig@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
piccolo = {extras = ["constraint"], version = "^1.5.1"}
piccolo-admin = "^1.3.3"

[tool.poetry.dev-dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
